--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@theme-ui/presets": "^0.6.1",
     "babel-eslint": "^10.1.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-mdx": "^2.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-theme-ui": "^0.6.0",
     "gatsby-source-filesystem": "^3.2.0",
     "graphql": "^15.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "theme-ui": "^0.6.1",
     "typescript": "^4.2.3"
   }
 }
