--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@theme-ui/presets": "^0.6.1",
+    "@theme-ui/prism": "^0.6.1",
     "babel-eslint": "^10.1.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-mdx": "^2.2.0",
