--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@theme-ui/prism": "^0.6.1",
     "babel-eslint": "^10.1.0",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-image": "^1.2.0",
     "gatsby-plugin-mdx": "^2.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
