--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "gatsby-plugin-image": "^1.2.0",
     "gatsby-plugin-mdx": "^2.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
-    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-plugin-theme-ui": "^0.6.0",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
+    "got": "^11.8.2",
     "graphql": "^15.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
