--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@theme-ui/css": "0.6.0",
     "@theme-ui/presets": "^0.6.1",
-    "@theme-ui/prism": "^0.6.1",
+    "@theme-ui/prism": "^0.6.2",
     "babel-eslint": "^10.1.0",
+    "eslint": "^4.12.1",
     "gatsby": "^3.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-image": "^1.2.0",
@@ -34,7 +37,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "theme-ui": "^0.6.1",
-    "typescript": "^4.2.3"
+    "theme-ui": "^0.6.2",
+    "typescript": "^4.2.3",
+    "webpack": "^5.2.0"
   }
 }
