--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Personal website by Laurence Lord",
   "author": "LL782",
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
