--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "theme-ui": "^0.6.2",
-    "typescript": "^4.2.3",
-    "webpack": "^5.2.0"
+    "typescript": "^4.2.3"
   }
 }
